[package]
name = "config-schema-gen"
version = "0.1.0"
authors = ["aljazerzen <aljaz@calms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
codegen = "0.1.3"
serde = "0.6.0"
serde_json = "1.0.64"
jsl = "*"
